--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 
 image:https://api.travis-ci.org/xbib/catalog-entities.svg[title="Build status", link="https://travis-ci.org/xbib/catalog-entities/"]
 image:https://img.shields.io/sonar/http/nemo.sonarqube.com/org.xbib%3Acatalog-entities/coverage.svg?style=flat-square[title="Coverage", link="https://sonarqube.com/dashboard/index?id=org.xbib%3Acatalog-entities"]
-image:https://maven-badges.herokuapp.com/maven-central/org.xbib/content/badge.svg[title="Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cxbib%20catalog-entities"]
+image:https://maven-badges.herokuapp.com/maven-central/org.xbib/catalog-entities/badge.svg[title="Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cxbib%20catalog-entities"]
 image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[title="Apache License 2.0", link="https://opensource.org/licenses/Apache-2.0"]
 
 This is a high performance Java library for transforming bibliographic data into catalog entities.
