--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,8 @@ image:https://api.travis-ci.org/xbib/catalog-entities.svg[title="Build status", 
 image:https://img.shields.io/sonar/http/nemo.sonarqube.com/org.xbib%3Acatalog-entities/coverage.svg?style=flat-square[title="Coverage", link="https://sonarqube.com/dashboard/index?id=org.xbib%3Acatalog-entities"]
 image:https://maven-badges.herokuapp.com/maven-central/org.xbib/catalog-entities/badge.svg[title="Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cxbib%20catalog-entities"]
 image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[title="Apache License 2.0", link="https://opensource.org/licenses/Apache-2.0"]
+image:https://img.shields.io/twitter/url/https/twitter.com/xbib.svg?style=social&label=Follow%20%40xbib[title="Twitter", link="https://twitter.com/xbib"]
+image:https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif[title="PayPal", link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GVHFQYZ9WZ8HG"]
 
 This is a high performance Java library for transforming bibliographic data into catalog entities.
 Catalog entities are represented as Java classes, which are used to generate RDF graphs from ISO 2709 or
