--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ The creation of the RDF graphs are in-memory and currently focused on a per-reco
 in future versions. Parallel processing offers high performance - on ordinary hardware, a million MARC records
 can be indexed into Elasticsearch per minute.
 
-image:http://adbu.fr/wp-content/uploads/2015/01/What_Catalogue_card_tell_us_CC_by_Char_Booth_via_flickr.jpg["What_Catalogue_card_tell_us_CC_by_Char_Booth_via_flickr" taken from http://adbu.fr/cataloguer-demain-conduire-le-changement/]
+image:http://adbu.fr/wp-content/uploads/2015/01/What_Catalogue_card_tell_us_CC_by_Char_Booth_via_flickr.jpg[What_Catalogue_card_tell_us_CC_by_Char_Booth_via_flickr taken from link:http://adbu.fr/cataloguer-demain-conduire-le-changement/]
 
 == Documentation
 
